# libspike-interfaces

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  result  spike-interfaces-test.cc  spike-interfaces.cc  spike-interfaces.h
examples/elfloader/: CMakeLists.txt  elfloader.c  elfloader.cc
examples/rs-elfloader/: Cargo.toml
examples/rs-elfloader/src/: difftest.rs  main.rs
examples/rs-elfloader/src/difftest/: spike.rs
examples/rs-elfloader/src/difftest/spike/: libspike_interfaces.rs
examples/rs_elfloader/: Cargo.toml
examples/rs_elfloader/src/: difftest.rs
examples/rs_elfloader/src/difftest/: dut.rs  spike.rs
examples/rs_elfloader/src/difftest/spike/: libspike_interfaces.rs
lib/: CMakeLists.txt  spike-interfaces.h
nix/: overlay.nix
nix/examples/: elfloader.nix  rs-elfloader.nix  rs_elfloader.nix
nix/pkgs/: libspike-interfaces.nix  libspike.nix  libspike_interfaces.nix
nix/spike-interfaces/: default.nix
nix/test/: default.nix
resources/: conv-mlir.elf  conv-mlir.text
src/: CMakeLists.txt  spike-interfaces.cc  spike-interfaces.h  spike_interfaces.cc  spike_interfaces.h  spike_interfaces_c.h  test.cc
tests/: elfloader.cc
